name:           VigenereHaskell
version:        0.1
synopsis:       A vigenère cipher encrypter/decrypter and breaker written in Haskell
author:         Tobias Fiechter & Dario Flury
license:        MIT
build-type:     Simple
cabal-version:  >= 1.2

executable vigenere
  main-is:        Main.hs
  hs-source-dirs: ./
  build-depends:  haskell2010, split, text, random, prelude, parallel
